--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sacramento">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-    <title>Works of Qifan Wu</title>
+    <title>Contact</title>
   </head>
   <body>
     <a class = "skip" href="#main">Skip to Main Content</a>
@@ -33,6 +33,10 @@
                 <label for="message">Leave a Message</label>
                 <textarea id="message" name="message" placeholder="Enter your message" style="height:200px"></textarea>
                 <input type="submit" value="Submit">
+                <br>
+                <label>
+                  <input type="checkbox" checked="checked" name="remember">Remember me
+                </label>
             </form>
         </div>
 
