--- a/design1.html
+++ b/design1.html
@@ -47,18 +47,23 @@
       </div>
       <h2>Project Information</h2>
       <p>The project is located in center of Shanghai. Due to the high-strength exploitation in the downtown area, there are mainly high-rise buildings around and no green land within 1KM  from the site. Therefore, the purpose of the design is to create greenery in the forest of concrete, making it possible for people to inhale a sense of nature.</p>
-      <figure class="center">
-        <img src="images/1-4.jpg" alt="surroundings"/>
-        <figcaption>Basic Analysis</figcaption>
-      </figure>
-      <p>According to interviews, residents around have a desperate need for a place to read and exercise, so these functions are included indoor and outdoor in the design. The neighboring residential area contains various types of communities, proving that the residents around come from distinctive stages.</p>
+      <div><div class="inline">
+        <figure class="center">
+          <img src="images/1-4.jpg" alt="surroundings"/>
+          <figcaption>Basic Analysis</figcaption>
+        </figure>
+        <p>According to interviews, residents around have a desperate need for a place to read and exercise, so these functions are included indoor and outdoor in the design. The neighboring residential area contains various types of communities, proving that the residents around come from distinctive stages.</p>
+      </div>
       <h2>Landscape Design</h2>
-      <figure class="center">
-        <img src="images/1-3.jpg" alt="site plan"/>
-        <figcaption>SITE PLAN</figcaption>
-      </figure>
-      <p>The community center is composed of six building blocks, each block diverging outward from center square, and connected to each other through corridors; this achieves the "convergence" of the center square and each block's relative "independence" - People can perform targeted activities in the inner courtyards and platforms of the building blocks, while the amphitheater and other outdoor landscape space are places for those from distinctive background to gather together and communicate.
-      </p>
+      <div>
+        <div class="inline">
+        <figure class="center">
+          <img src="images/1-3.jpg" alt="site plan"/>
+          <figcaption>SITE PLAN</figcaption>
+        </figure>
+        <p>The community center is composed of six building blocks, each block diverging outward from center square, and connected to each other through corridors; this achieves the "convergence" of the center square and each block's relative "independence" - People can perform targeted activities in the inner courtyards and platforms of the building blocks, while the amphitheater and other outdoor landscape space are places for those from distinctive background to gather together and communicate.
+        </p>
+      </div>
       <h2>Effect Pictures</h2>
       <div class="fleximg-container center">
         <figure>
